tests/chapter_18/invalid_parse/struct_member_no_declarator.c
struct s {
    int;  // every structure member needs a declarator
};